changed file names, added some styling

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -26,3 +26,15 @@
 .data-table-wrapper {
 	padding-top: 10px;
 }
+.field-selector-wrapper {
+	.checkbox-div {
+		float: left;
+		padding-right: 5px;
+	}
+	.checkbox-value {
+		float: left;
+		@media(max-width: @screen-width-medium-min){
+			font-size: 12px;
+		}
+	}
+}
