added the ability to add and delete columns using an array of checkboxes

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -1,7 +1,9 @@
+@screen-width-extra-small: 544px;
 @screen-width-small: 768px;
 @screen-width-medium: 992px;
 @screen-width-large: 1200px;
 
+@screen-width-extra-small-min: (@screen-width-extra-small - 1);
 @screen-width-small-min: (@screen-width-small - 1);
 @screen-width-medium-min: (@screen-width-medium - 1);
 @screen-width-large-min: (@screen-width-large - 1);
