adding .csv download capability

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -18,6 +18,9 @@
 		}
 	}
 }
+.csv-wrapper {
+	padding-top: 10px;
+}
 .input-options {
 	.form-control[disabled="disabled"] {
 		background-color: white;
@@ -32,9 +35,9 @@
 	padding-top: 20px;
 }
 .field-selector-wrapper {
-	#caret-span {
+	#caret-i {
 		position: relative;
-		top: 4px;
+		top: 3px;
 		left: 10px;
 	}
 	.dropdown-button {
