added error message for failed login attempts.

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -62,7 +62,7 @@
 	}
 }
 .login-modal-body {
-	.login-success {
+	.login-success, .login-error {
 		line-height: .3;
 		position: relative;
 		top: 24px;
