added tracking for which rows were fetched for each query in UI

--- a/client/less/main.less
+++ b/client/less/main.less
@@ -59,6 +59,10 @@
 		@media(max-width: @screen-width-medium-min){
 			font-size: 12px;
 		}
+		.fetch-success {
+			font-weight: normal;
+			color : #5cb85c;
+		}
 	}
 }
 .login-modal-body {
